--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,7 @@
-/* Reset styles */
+* {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -11,6 +14,7 @@ p {
 
 body {
   padding: 10px 20px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 p:last-child {
@@ -38,10 +42,6 @@ img {
   height: auto;
 }
 
-.header {
-  padding: 20px 0;
-}
-
 .nav-list {
   display: flex;
   align-items: center;
@@ -60,4 +60,193 @@ img {
 .nav-link:hover,
 .nav-link:focus {
   color: #747bff;
+}
+
+.nav-item {
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.home-link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
+  font-size: 18px;
+  text-decoration: underline;
+}
+.home-link:hover,
+.home-link:focus {
+  color: #747bff;
+  font-weight: bold;
+}
+
+.js-button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  background: #4e75ff;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: none;
+}
+
+.js-button:disabled {
+  background: #cfcfcf;
+  color: #989898;
+}
+
+.js-button:hover {
+  background: #6c8cff;
+}
+
+#datetime-picker {
+  border-radius: 4px;
+  border: 1px solid #808080;
+  width: 272px;
+  height: 40px;
+  background: #fff;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  margin-left: 156px;
+  margin-top: 26px;
+  padding: 8px 16px;
+}
+
+#datetime-picker:hover {
+  border: 1px solid #000;
+}
+
+#datetime-picker:active {
+  border: 1px solid #4e75ff;
+}
+
+#datetime-picker:disabled {
+  border: 1px solid #808080;
+  background: #fafafa;
+  color: #808080;
+}
+
+.timer {
+  width: 346px;
+  display: flex;
+  gap: 24px;
+  margin-top: 32px;
+  margin-left: 156px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: calc((100% - 3 * 24px) / 4);
+}
+
+.value {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.label {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2e2f42;
+}
+
+.form {
+  width: 360px;
+  margin-top: 36px;
+  margin-left: 156px;
+  display: flex;
+  flex-direction: column;
+}
+
+.js-delay {
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.js-delay-input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  height: 40px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding: 8px 16px;
+}
+
+.js-delay-input:hover {
+  border: 1px solid #000;
+}
+
+.js-delay-imput:active {
+  border: 1px solid #4e75ff;
+}
+
+fieldset {
+  height: 78px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  border-radius: 4px;
+  stroke-width: 1px;
+  stroke: #808080;
+  padding: 24px 48px 8px 48px;
+  margin: 0 0 24px 0;
+  display: flex;
+  gap: 48px;
+}
+
+fieldset:hover {
+  stroke: #000;
+}
+
+fieldset:active {
+  stroke: #000;
+}
+
+form button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  height: 40px;
+  background: #4e75ff;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: none;
+}
+
+form button:hover {
+  background: #6c8cff;
 }
